--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -12,11 +12,11 @@
             margin: 0; /* 去除預設邊距 */
         }
         h1 {
-            font-size: 500px; /* 可以調整字體大小 */
+            font-size: 50px; /* 可以調整字體大小 */
         }
     </style>
 </head>
 <body>
-    <h1>FUCK YOU</h1>
+    <h1>ㄤ估貴</h1>
 </body>
 </html>
